<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference 
	android:key="touch"
	android:title="@string/enableTouch">
  </CheckBoxPreference>

<ListPreference
	android:key="kind"
	android:title="@string/kindOfParticles"
	android:entries="@array/kind_of_particles"
	android:entryValues="@array/kind_of_particles_values"
	android:dialogTitle="@string/kindOfParticles" />  

<ListPreference
	android:key="color"
	android:title="@string/colorOfParticles"
	android:entries="@array/color_of_particle"
	android:entryValues="@array/color_of_particle_values"
	android:dialogTitle="@string/colorOfParticles" />  
	

<EditTextPreference
	android:key="delay"
	android:defaultValue="10"
	android:title="@string/delayTime"
	android:summary="@string/delayTimeSummary"
	android:dialogTitle="@string/delayTime" />

<com.fivecubed.f3wall.LogoBuilderPreference 
	android:dialogLayout="@layout/logo_builder"
	android:dialogTitle="Logo builder"
	android:dialogMessage="Build your logo"
	android:key="logo"
	android:title="Logo builder"
	android:summary="Allow you build your own logo"
	android:defaultValue="" /> 
    
</PreferenceScreen> 